--- a/src/main/java/paint/board/MainWindow.form
+++ b/src/main/java/paint/board/MainWindow.form
@@ -10,31 +10,6 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="1b01f" binding="stretcher" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="5" left="5" bottom="5" right="5"/>
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-1839378"/>
-        </properties>
-        <border type="none"/>
-        <children>
-          <grid id="5de52" binding="canvas" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-1"/>
-            </properties>
-            <border type="line">
-              <color color="-6843237"/>
-            </border>
-            <children/>
-          </grid>
-        </children>
-      </grid>
       <grid id="480e8" binding="tools" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="0">
         <margin top="0" left="5" bottom="0" right="5"/>
         <constraints>
@@ -110,7 +85,7 @@
                 </constraints>
                 <properties>
                   <text value=""/>
-                  <toolTipText value="橡皮"/>
+                  <toolTipText value="直线"/>
                 </properties>
               </component>
               <component id="c3e11" class="javax.swing.JButton" binding="drag">
@@ -122,10 +97,10 @@
                 </constraints>
                 <properties>
                   <text value=""/>
-                  <toolTipText value="橡皮"/>
+                  <toolTipText value="移动形状(铅笔笔迹无法移动)"/>
                 </properties>
               </component>
-              <component id="b3e1d" class="javax.swing.JButton" binding="button3" default-binding="true">
+              <component id="b3e1d" class="javax.swing.JButton" binding="straw">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="30" height="30"/>
@@ -134,9 +109,10 @@
                 </constraints>
                 <properties>
                   <text value=""/>
+                  <toolTipText value="吸取颜色"/>
                 </properties>
               </component>
-              <component id="a3f80" class="javax.swing.JButton" binding="button4" default-binding="true">
+              <component id="a3f80" class="javax.swing.JButton" binding="text">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="30" height="30"/>
@@ -237,6 +213,7 @@
                 </constraints>
                 <properties>
                   <background color="-16777216"/>
+                  <enabled value="false"/>
                   <text value=""/>
                 </properties>
               </component>
@@ -266,7 +243,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="306d5" class="javax.swing.JButton" binding="brightGrey">
+              <component id="306d5" class="javax.swing.JButton" binding="brightGray">
                 <constraints>
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="15" height="15"/>
@@ -279,7 +256,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="7220a" class="javax.swing.JButton" binding="grey">
+              <component id="7220a" class="javax.swing.JButton" binding="gray">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="15" height="15"/>
@@ -471,7 +448,7 @@
                       </grid>
                     </constraints>
                     <properties>
-                      <background color="-67073"/>
+                      <background color="-131073"/>
                       <text value=""/>
                     </properties>
                   </component>
@@ -612,6 +589,40 @@
           </component>
         </children>
       </grid>
+      <scrollpane id="2d9e5">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="1b01f" binding="stretcher" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="5" left="5" bottom="5" right="5"/>
+            <constraints/>
+            <properties>
+              <background color="-1839378"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <grid id="5de52" binding="canvas" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="800" height="600"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <background color="-1"/>
+                </properties>
+                <border type="line">
+                  <color color="-6843237"/>
+                </border>
+                <children/>
+              </grid>
+            </children>
+          </grid>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
