Dylan commit: 修复了带颜色填充的形状问题

--- a/src/main/java/paint/board/MainWindow.form
+++ b/src/main/java/paint/board/MainWindow.form
@@ -464,18 +464,40 @@
                   </hspacer>
                 </children>
               </grid>
-              <component id="18451" class="javax.swing.JButton" binding="moreColor">
+              <grid id="89671" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="1" use-parent-layout="false">
-                    <minimum-size width="90" height="20"/>
-                    <preferred-size width="90" height="20"/>
-                    <maximum-size width="90" height="20"/>
+                  <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="30"/>
+                    <preferred-size width="-1" height="30"/>
+                    <maximum-size width="-1" height="30"/>
                   </grid>
                 </constraints>
-                <properties>
-                  <text value="其他"/>
-                </properties>
-              </component>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="4108b" class="javax.swing.JRadioButton" binding="fill">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="填充"/>
+                    </properties>
+                  </component>
+                  <component id="18451" class="javax.swing.JButton" binding="moreColor">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                        <minimum-size width="40" height="20"/>
+                        <preferred-size width="40" height="20"/>
+                        <maximum-size width="40" height="20"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="其他"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <scrollpane id="e0a">
