--- a/src/main/java/paint/board/MainWindow.form
+++ b/src/main/java/paint/board/MainWindow.form
@@ -517,18 +517,6 @@
           </scrollpane>
         </children>
       </grid>
-      <component id="1618c" class="javax.swing.JMenuBar" binding="mainMenuBar">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="30"/>
-            <preferred-size width="-1" height="30"/>
-            <maximum-size width="-1" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-1"/>
-        </properties>
-      </component>
       <grid id="cd044" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -578,7 +566,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="d6b3f" class="javax.swing.JButton" binding="button5" default-binding="true">
+          <component id="d6b3f" class="javax.swing.JButton" binding="fullScreen">
             <constraints>
               <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <preferred-size width="20" height="-1"/>
@@ -587,6 +575,7 @@
             </constraints>
             <properties>
               <text value=""/>
+              <toolTipText value="全屏显示"/>
             </properties>
           </component>
           <component id="2ab9b" class="javax.swing.JLabel" binding="CursorPositionLabel">
@@ -645,6 +634,18 @@
           </grid>
         </children>
       </scrollpane>
+      <component id="1618c" class="javax.swing.JMenuBar" binding="mainMenuBar">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="30"/>
+            <preferred-size width="-1" height="30"/>
+            <maximum-size width="-1" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
