--- a/src/main/java/paint/board/MainWindow.form
+++ b/src/main/java/paint/board/MainWindow.form
@@ -185,13 +185,13 @@
               </grid>
             </children>
           </grid>
-          <grid id="150e4" binding="color" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="150e4" binding="color" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="2" bottom="0" right="2"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="120" height="190"/>
-                <preferred-size width="120" height="190"/>
-                <maximum-size width="120" height="190"/>
+                <minimum-size width="120" height="220"/>
+                <preferred-size width="120" height="220"/>
+                <maximum-size width="120" height="220"/>
               </grid>
             </constraints>
             <properties>
@@ -498,6 +498,24 @@
                   </component>
                 </children>
               </grid>
+              <component id="c3b12" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="线条粗细"/>
+                </properties>
+              </component>
+              <component id="90aaf" class="javax.swing.JSpinner" binding="stroke">
+                <constraints>
+                  <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="50" height="40"/>
+                    <preferred-size width="50" height="40"/>
+                    <maximum-size width="50" height="40"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
             </children>
           </grid>
           <scrollpane id="e0a">
@@ -533,12 +551,12 @@
         <children>
           <hspacer id="b0d2c">
             <constraints>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <component id="fcd54" class="javax.swing.JLabel" binding="canvasSizeLabel">
             <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="500*500"/>
@@ -552,7 +570,7 @@
               </grid>
             </constraints>
             <properties>
-              <text value=""/>
+              <text value="保存"/>
             </properties>
           </component>
           <component id="9c952" class="javax.swing.JButton" binding="create">
@@ -566,36 +584,38 @@
               <text value="新建"/>
             </properties>
           </component>
-          <component id="d6b3f" class="javax.swing.JButton" binding="fullScreen">
-            <constraints>
-              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <preferred-size width="20" height="-1"/>
-                <maximum-size width="20" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-              <toolTipText value="全屏显示"/>
-            </properties>
-          </component>
           <component id="2ab9b" class="javax.swing.JLabel" binding="CursorPositionLabel">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="1234"/>
             </properties>
           </component>
-          <component id="5671e" class="javax.swing.JButton" binding="button6" default-binding="true">
+          <component id="d6b3f" class="javax.swing.JButton" binding="fullScreen">
             <constraints>
-              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <preferred-size width="20" height="-1"/>
-                <maximum-size width="20" height="-1"/>
+              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="60" height="20"/>
+                <preferred-size width="60" height="20"/>
+                <maximum-size width="60" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="全屏"/>
+              <toolTipText value="全屏显示"/>
+            </properties>
+          </component>
+          <component id="5671e" class="javax.swing.JButton" binding="open">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="60" height="20"/>
+                <preferred-size width="60" height="20"/>
+                <maximum-size width="60" height="20"/>
               </grid>
             </constraints>
             <properties>
               <hideActionText value="false"/>
-              <text value=""/>
+              <text value="打开"/>
             </properties>
           </component>
           <component id="5e5fe" class="javax.swing.JLabel" binding="curToolLabel">
