Dylan commit: 基本完成开发，更新了图标，准备发布release

--- a/src/main/java/paint/board/MainWindow.form
+++ b/src/main/java/paint/board/MainWindow.form
@@ -55,6 +55,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <background color="-513"/>
                   <text value=""/>
                   <toolTipText value="橡皮"/>
                 </properties>
@@ -84,6 +85,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <background color="-1"/>
                   <text value=""/>
                   <toolTipText value="直线"/>
                 </properties>
@@ -96,6 +98,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <background color="-1"/>
                   <text value=""/>
                   <toolTipText value="移动形状(铅笔笔迹无法移动)"/>
                 </properties>
@@ -108,6 +111,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <background color="-1"/>
                   <text value=""/>
                   <toolTipText value="吸取颜色"/>
                 </properties>
@@ -120,6 +124,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <background color="-1"/>
                   <text value=""/>
                 </properties>
               </component>
@@ -213,7 +218,7 @@
                 </constraints>
                 <properties>
                   <background color="-16777216"/>
-                  <enabled value="false"/>
+                  <enabled value="true"/>
                   <text value=""/>
                 </properties>
               </component>
@@ -551,12 +556,12 @@
         <children>
           <hspacer id="b0d2c">
             <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <component id="fcd54" class="javax.swing.JLabel" binding="canvasSizeLabel">
             <constraints>
-              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="500*500"/>
@@ -565,28 +570,18 @@
           <component id="d718f" class="javax.swing.JButton" binding="save">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="60" height="20"/>
-                <maximum-size width="60" height="20"/>
+                <minimum-size width="50" height="20"/>
+                <preferred-size width="50" height="20"/>
+                <maximum-size width="50" height="20"/>
               </grid>
             </constraints>
             <properties>
-              <text value="保存"/>
-            </properties>
-          </component>
-          <component id="9c952" class="javax.swing.JButton" binding="create">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="60" height="20"/>
-                <maximum-size width="60" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="新建"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="2ab9b" class="javax.swing.JLabel" binding="CursorPositionLabel">
             <constraints>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="1234"/>
@@ -595,35 +590,49 @@
           <component id="d6b3f" class="javax.swing.JButton" binding="fullScreen">
             <constraints>
               <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="60" height="20"/>
-                <preferred-size width="60" height="20"/>
-                <maximum-size width="60" height="20"/>
+                <minimum-size width="20" height="20"/>
+                <preferred-size width="20" height="20"/>
+                <maximum-size width="20" height="20"/>
               </grid>
             </constraints>
             <properties>
-              <text value="全屏"/>
+              <text value=""/>
               <toolTipText value="全屏显示"/>
-            </properties>
-          </component>
-          <component id="5671e" class="javax.swing.JButton" binding="open">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="60" height="20"/>
-                <preferred-size width="60" height="20"/>
-                <maximum-size width="60" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <hideActionText value="false"/>
-              <text value="打开"/>
             </properties>
           </component>
           <component id="5e5fe" class="javax.swing.JLabel" binding="curToolLabel">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Label"/>
+            </properties>
+          </component>
+          <component id="5671e" class="javax.swing.JButton" binding="open">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="50" height="20"/>
+                <preferred-size width="50" height="20"/>
+                <maximum-size width="50" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <defaultCapable value="true"/>
+              <doubleBuffered value="false"/>
+              <hideActionText value="false"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="9c952" class="javax.swing.JButton" binding="create">
+            <constraints>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="20" height="20"/>
+                <preferred-size width="20" height="20"/>
+                <maximum-size width="20" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -653,7 +662,7 @@
                 <properties>
                   <background color="-1"/>
                 </properties>
-                <border type="line">
+                <border type="none">
                   <color color="-6843237"/>
                 </border>
                 <children/>
